--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "AndresMpa",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.53.0",
+    "prettier": "^3.0.3"
   }
 }
