--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A server for testing request",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "lint": "eslint"
   },
   "keywords": [
     "testing",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "eslint": "^8.53.0",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.3"
   }
 }
